fixed dark mode colors and etc

--- a/app/print.css
+++ b/app/print.css
@@ -33,7 +33,7 @@
     line-height: 2.25rem !important;
   }
 
-  .text-gray-500 {
+  .text-neutral-500 {
     color: #6b7280 !important;
   }
 
@@ -51,7 +51,7 @@
   .hover\:bg-lime-200:hover,
   .hover\:bg-violet-200:hover,
   .hover\:bg-rose-200:hover,
-  .hover\:bg-gray-200:hover {
+  .hover\:bg-neutral-200:hover {
     background-color: inherit !important;
   }
 
